<resources>
    <string name="app_name">TitanFlex</string>
    <string name="iniciar">Iniciar</string>
    <string name="mensajeFormulario">Ingresa los datos requeridos</string>
    <string name="fechaUsuarioFormulario">Fecha de nacimiento:</string>
    <string name="altura">Altura:</string>
    <string name="peso">Peso:</string>
    <string name="sexo">¿Cuál es tu sexo?</string>
    <string name="male">Hombre</string>
    <string name="female">Mujer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="equipo_necesario">Equipo necesario</string>
    <string-array name="peso_kg">
        <item>Kg.</item>
    </string-array>
</resources>