<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".formularioInicial"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

            <TextView
                android:layout_width="220dp"
                android:layout_height="40dp"
                android:layout_margin="15dp"
                android:background="#03A9F4"
                android:gravity="center"
                android:text="@string/mensajeFormulario"
                android:textAlignment="center"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sexo"
                android:textAlignment="center"
                android:textColor="@color/black" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="180dp">
                <androidx.cardview.widget.CardView
                    android:id="@+id/viewMale"
                    android:layout_width="160dp"
                    android:layout_height="160dp"
                    android:layout_marginEnd="16dp"
                    app:cardCornerRadius="20dp"
                    app:layout_constraintEnd_toStartOf="@id/viewFemale"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/background_with_border"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="80dp"
                            android:layout_height="80dp"
                            android:src="@drawable/male"
                            app:tint="@color/black" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/male"
                            android:textAllCaps="true"
                            android:textColor="@color/black" />
                    </androidx.appcompat.widget.LinearLayoutCompat>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/viewFemale"
                    android:layout_width="160dp"
                    android:layout_height="160dp"
                    app:cardCornerRadius="20dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/viewMale"
                    app:layout_constraintTop_toTopOf="parent">

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/background_with_border"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="70dp"
                            android:layout_height="80dp"
                            android:src="@drawable/female"
                            app:tint="@color/black" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/female"
                            android:textAllCaps="true"
                            android:textColor="@color/black" />
                    </androidx.appcompat.widget.LinearLayoutCompat>
                </androidx.cardview.widget.CardView>

            </androidx.constraintlayout.widget.ConstraintLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fechaUsuarioFormulario"
                android:textAlignment="center"
                android:textColor="@color/black"/>


            <Button
                android:id="@+id/fechaFormulario"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:backgroundTint="#03A9F4"
                android:text="Ingresar fecha"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textAlignment="center"
                android:text="@string/altura"/>

            <EditText
                android:id="@+id/alturaFormulario"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:hint="Centimetros"
                android:importantForAutofill="no"
                android:inputType="numberDecimal"
                android:textAlignment="center"
                tools:ignore="LabelFor" />

            <TextView
                android:textAlignment="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/peso"/>

            <EditText
                android:id="@+id/pesoFormulario"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:hint="Kilogramos"
                android:importantForAutofill="no"
                android:inputType="numberDecimal"
                android:textAlignment="center"
                tools:ignore="LabelFor" />

            <Button
                android:id="@+id/btn_Formulario"
                style="@style/boton_a_desactivado"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:layout_gravity="center"
                android:background="#03A9F4"
                android:enabled="false"
                android:text="Continuar"
                android:textColor="@color/black" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>